--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-id-swiper": "^2.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-stripe-checkout": "^2.6.3",
     "swiper": "^5.3.0"
   },
   "scripts": {
